--- a/main.html
+++ b/main.html
@@ -10,6 +10,30 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	 <form action="#">
+        <label for="name">Name:</label>
+        <input type="text" name="name" id="name" placeholder="Name">
+   
+        <label for="phone">Phone Number:</label>
+        <input type="text" name="phone" id="phone" placeholder="Phone Number">
+
+        <label for="address">Address:</label>
+        <input type="text" name="address" id="address" placeholder="Address">
+
+        <label for="checkbox">Have you ever lived with a Dog before?</label>
+        <input type="checkbox" name="checkbox" id="checkbox" value="Have you ever lived with a Dog before?">
+   
+        <label for="multiSelect">Please select your preferred breeds:</label>
+        <select name="multiSelect" id="multiSelect">
+            <option value="Labrador Retriever">Labrador Retriever</option>
+            <option value="German Shepherd">German Shepherd</option>
+            <option value="Golden Retriever">Golden Retriever</option>
+            <option value="Poodle">Poodle</option>
+        </select>
+
+        <input type="submit" name="submit" id="submit" value="submit">
+   
+    </form>
 
 </body>
 
