--- a/main.html
+++ b/main.html
@@ -31,7 +31,7 @@
             <option value="Poodle">Poodle</option>
         </select>
 
-        <input type="submit" name="submit" id="submit" value="submit">
+        <input type="submit" name="submit" id="submit" value="Submit">
    
     </form>
 
